--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -2,7 +2,7 @@
 <nav class="collapse navbar-collapse" id="main-nav" role="navigation" aria-label="Main site navigation">
   <ul class="navbar-nav w-auto mx-auto">
 
-    {% comment %} All Tools Dropdown {% endcomment %}
+    <!-- All Tools Dropdown -->
     <li class="nav-item dropdown">
       <a class="logo-font nav-link dropdown-toggle text-light mx-3 px-2"
          href="#" id="all-tools-link" role="button" data-toggle="dropdown"
@@ -17,7 +17,7 @@
       </div>
     </li>
 
-    {% comment %} Power Tools Dropdown {% endcomment %}
+    <!-- Power Tools Dropdown -->
     <li class="nav-item dropdown">
       <a class="logo-font nav-link dropdown-toggle text-light mx-3 px-2"
          href="#" id="power-tools-link" role="button" data-toggle="dropdown"
@@ -32,7 +32,7 @@
       </div>
     </li>
 
-    {% comment %} Hand Tools Dropdown {% endcomment %}
+    <!-- Hand Tools Dropdown -->
     <li class="nav-item dropdown">
       <a class="logo-font nav-link dropdown-toggle text-light mx-3 px-2"
          href="#" id="hand-tools-link" role="button" data-toggle="dropdown"
