add facebook page link

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -4,9 +4,14 @@
 
     {% comment %} Social Media Links {% endcomment %}
     <section class="footer-social mb-2" aria-label="Social media links">
-      <a href="#" target="_blank" aria-label="Visit our Facebook page" class="mx-2 text-white">
-        <i class="fab fa-facebook fa-lg"></i>
-      </a>
+      <a href="https://www.facebook.com/profile.php?id=61577160016945"
+   target="_blank"
+   rel="noopener noreferrer"
+   aria-label="Visit our Facebook page"
+   class="mx-2 text-white">
+  <i class="fab fa-facebook fa-lg"></i>
+</a>
+
     </section>
 
     {% comment %} Testimonial Button {% endcomment %}
