--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,13 @@
 
   {% block extra_meta %}{% endblock %}
 
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="{% static 'css/favicon/apple-touch-icon.png' %}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'css/favicon/favicon-32x32.png' %}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{% static 'css/favicon/favicon-16x16.png' %}">
+    <link rel="manifest" href="{% static 'css/favicon/site.webmanifest' %}">
+    <link rel="shortcut icon" href="{% static 'css/favicon/favicon.ico' %}">
+    
   {% block corecss %}
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato|Oswald&display=swap">
