--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -119,22 +119,24 @@
             <!-- Quantity Input -->
             <div class="col-12">
               <p class="mt-3"><strong>Quantity:</strong></p>
-              <div class="input-group qty-wrapper">
-                <div class="input-group-prepend">
-                  <button class="decrement-qty btn btn-sm btn-navy qty-button"
-                          data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                    <i class="fas fa-minus"></i>
-                  </button>
-                </div>
-                <input class="form-control qty_input" type="number" name="quantity" value="1"
+              <div class="qty-wrapper">
+                <button type="button"
+                        class="decrement-qty qty-button"
+                        data-item_id="{{ product.id }}"
+                        id="decrement-qty_{{ product.id }}">
+                  <i class="fas fa-minus"></i>
+                </button>
+              
+                <input class="qty_input" type="number" name="quantity" value="1"
                        min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}">
-                <div class="input-group-append">
-                  <button class="increment-qty btn btn-sm btn-navy qty-button"
-                          data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                    <i class="fas fa-plus"></i>
-                  </button>
-                </div>
-              </div>
+              
+                <button type="button"
+                        class="increment-qty qty-button"
+                        data-item_id="{{ product.id }}"
+                        id="increment-qty_{{ product.id }}">
+                  <i class="fas fa-plus"></i>
+                </button>
+              </div>              
             </div>
 
             <!-- Buttons -->
