--- a/templates/base.html
+++ b/templates/base.html
@@ -73,26 +73,27 @@
       <nav class="col-12 col-lg-4 my-auto py-1 text-center text-lg-right">
         <ul class="list-inline list-unstyled my-0">
           <!-- 👤 Account Dropdown -->
-          <li class="list-inline-item dropdown">
-            <a class="nav-link text-light" href="#" id="user-options" data-toggle="dropdown">
-              <div class="text-center">
-                <div><i class="fas fa-user fa-lg"></i></div>
-                <p class="my-0 oswald-font font-weight-bold">My Account</p>
-              </div>
-            </a>            
-            <div class="dropdown-menu border-0" aria-labelledby="user-options">
-              {% if request.user.is_authenticated %}
-                {% if request.user.is_superuser %}
-                  <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
-                {% endif %}
-                <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
-                <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
-              {% else %}
-                <a href="{% url 'account_signup' %}" class="dropdown-item">Sign Up</a>
-                <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
-              {% endif %}
-            </div>
-          </li>
+<li class="list-inline-item dropdown">
+  <a class="nav-link text-light" href="#" id="user-options" data-toggle="dropdown">
+    <div class="text-center">
+      <div><i class="fas fa-user fa-lg"></i></div>
+      <p class="my-0 oswald-font font-weight-bold">My Account</p>
+    </div>
+  </a>
+  <div class="dropdown-menu border-0" aria-labelledby="user-options">
+    {% if request.user.is_authenticated %}
+      {% if request.user.is_superuser %}
+        <a href="{% url 'add_product' %}" class="dropdown-item">Product Management</a>
+      {% endif %}
+      <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
+      <a href="{% url 'profile' %}#wishlist-heading" class="dropdown-item">Wishlist</a>
+      <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+    {% else %}
+      <a href="{% url 'account_signup' %}" class="dropdown-item">Sign Up</a>
+      <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+    {% endif %}
+  </div>
+</li>
 
           <!-- 🛍️ Shopping Bag Icon -->
           <li class="list-inline-item">
