--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -60,7 +60,9 @@
               {% endif %}
             </a>
             <div class="card-body px-2">
-              <h5 class="card-title font-weight-bold mb-1">{{ product.name }}</h5>
+              <h5 class="card-title font-weight-bold mb-1">
+                <i class="fas fa-tools text-primary mr-1"></i> {{ product.name }}
+              </h5>              
               <p class="product-price mb-2">£{{ product.price }}</p>
               {% if product.rating %}
               <p class="product-star-rating mb-1">
