--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -10,98 +10,103 @@
 {% block content %}
 <div class="overlay"></div>
 
-<div class="checkout-page-wrapper">
+<main class="checkout-page-wrapper" role="main">
   <div class="container checkout-content">
-    <div class="row">
+    <header class="row mb-4">
       <div class="col">
         <hr>
-        <h2 class="logo-font mb-4 text-uppercase">Order Confirmed</h2>
+        <h1 class="logo-font mb-4 text-uppercase">Order Confirmed</h1>
         <hr>
         <p class="text-black">
           We've locked and loaded your tools! A confirmation email is heading to <strong>{{ order.email }}</strong>.
         </p>
       </div>
-    </div>
+    </header>
 
-    <div class="row">
+    <section class="row" aria-label="Order Confirmation Details">
       <div class="col-12 col-lg-7">
         <fieldset class="rounded px-3 py-4 mb-5 border order-confirmation-wrapper">
           <legend class="fieldset-label small text-black px-2 w-auto">Order Information</legend>
 
-          <div class="row mb-3">
-            <div class="col-md-4 font-weight-bold text-black">Order Number</div>
-            <div class="col-md-8 text-md-right order-number-text">{{ order.order_number }}</div>
-          </div>
-          <div class="row mb-3">
-            <div class="col-md-4 font-weight-bold text-black">Order Date</div>
-            <div class="col-md-8 text-md-right">{{ order.date }}</div>
-          </div>
+          <dl class="row mb-3">
+            <dt class="col-md-4 font-weight-bold text-black">Order Number</dt>
+            <dd class="col-md-8 text-md-right order-number-text">{{ order.order_number }}</dd>
+
+            <dt class="col-md-4 font-weight-bold text-black">Order Date</dt>
+            <dd class="col-md-8 text-md-right">{{ order.date }}</dd>
+          </dl>
 
           <hr class="my-3">
           <small class="text-muted">Order Details:</small>
-          {% for item in order.lineitems.all %}
-          <div class="row mb-2">
-            <div class="col-md-4 font-weight-bold text-black">
-              {{ item.product.name }}{% if item.product_size %} - Size {{ item.product_size|upper }}{% endif %}
+          <dl>
+            {% for item in order.lineitems.all %}
+            <div class="row mb-2">
+              <dt class="col-md-4 font-weight-bold text-black">
+                {{ item.product.name }}{% if item.product_size %} - Size {{ item.product_size|upper }}{% endif %}
+              </dt>
+              <dd class="col-md-8 text-md-right">
+                {{ item.quantity }} @ £{{ item.product.price }} each
+              </dd>
             </div>
-            <div class="col-md-8 text-md-right">
-              {{ item.quantity }} @ £{{ item.product.price }} each
-            </div>
-          </div>
-          {% endfor %}
+            {% endfor %}
+          </dl>
 
           <hr class="my-3">
           <small class="text-muted">Delivering To:</small>
-          {% if order.full_name %}
-          <div class="row mb-2">
-            <div class="col-md-4 font-weight-bold text-black">Full Name</div>
-            <div class="col-md-8 text-md-right">{{ order.full_name }}</div>
-          </div>
-          {% endif %}
-          {% if order.street_address1 %}
-          <div class="row mb-2">
-            <div class="col-md-4 font-weight-bold text-black">Address 1</div>
-            <div class="col-md-8 text-md-right">{{ order.street_address1 }}</div>
-          </div>
-          {% endif %}
-          {% if order.town_or_city %}
-          <div class="row mb-2">
-            <div class="col-md-4 font-weight-bold text-black">Town or City</div>
-            <div class="col-md-8 text-md-right">{{ order.town_or_city }}</div>
-          </div>
-          {% endif %}
-          {% if order.country %}
-          <div class="row mb-2">
-            <div class="col-md-4 font-weight-bold text-black">Country</div>
-            <div class="col-md-8 text-md-right">{{ order.country }}</div>
-          </div>
-          {% endif %}
-          {% if order.phone_number %}
-          <div class="row mb-2">
-            <div class="col-md-4 font-weight-bold text-black">Phone Number</div>
-            <div class="col-md-8 text-md-right">{{ order.phone_number }}</div>
-          </div>
-          {% endif %}
+          <dl>
+            {% if order.full_name %}
+            <div class="row mb-2">
+              <dt class="col-md-4 font-weight-bold text-black">Full Name</dt>
+              <dd class="col-md-8 text-md-right">{{ order.full_name }}</dd>
+            </div>
+            {% endif %}
+            {% if order.street_address1 %}
+            <div class="row mb-2">
+              <dt class="col-md-4 font-weight-bold text-black">Address 1</dt>
+              <dd class="col-md-8 text-md-right">{{ order.street_address1 }}</dd>
+            </div>
+            {% endif %}
+            {% if order.town_or_city %}
+            <div class="row mb-2">
+              <dt class="col-md-4 font-weight-bold text-black">Town or City</dt>
+              <dd class="col-md-8 text-md-right">{{ order.town_or_city }}</dd>
+            </div>
+            {% endif %}
+            {% if order.country %}
+            <div class="row mb-2">
+              <dt class="col-md-4 font-weight-bold text-black">Country</dt>
+              <dd class="col-md-8 text-md-right">{{ order.country }}</dd>
+            </div>
+            {% endif %}
+            {% if order.phone_number %}
+            <div class="row mb-2">
+              <dt class="col-md-4 font-weight-bold text-black">Phone Number</dt>
+              <dd class="col-md-8 text-md-right">{{ order.phone_number }}</dd>
+            </div>
+            {% endif %}
+          </dl>
 
           <hr class="my-3">
           <small class="text-muted">Billing Info:</small>
-          <div class="row mb-2">
-            <div class="col-md-4 font-weight-bold text-black">Order Total</div>
-            <div class="col-md-8 text-md-right">£{{ order.order_total }}</div>
-          </div>
-          <div class="row mb-2">
-            <div class="col-md-4 font-weight-bold text-black">Delivery</div>
-            <div class="col-md-8 text-md-right">£{{ order.delivery_cost }}</div>
-          </div>
-          <div class="row">
-            <div class="col-md-4 font-weight-bold text-black">Grand Total</div>
-            <div class="col-md-8 text-md-right">£{{ order.grand_total }}</div>
-          </div>
+          <dl>
+            <div class="row mb-2">
+              <dt class="col-md-4 font-weight-bold text-black">Order Total</dt>
+              <dd class="col-md-8 text-md-right">£{{ order.order_total }}</dd>
+            </div>
+            <div class="row mb-2">
+              <dt class="col-md-4 font-weight-bold text-black">Delivery</dt>
+              <dd class="col-md-8 text-md-right">£{{ order.delivery_cost }}</dd>
+            </div>
+            <div class="row">
+              <dt class="col-md-4 font-weight-bold text-black">Grand Total</dt>
+              <dd class="col-md-8 text-md-right">£{{ order.grand_total }}</dd>
+            </div>
+          </dl>
         </fieldset>
       </div>
-    </div>
+    </section>
 
-    <div class="row">
+    <nav class="row">
       <div class="col-12 col-lg-7 text-right">
         {% if from_profile %}
         <a href="{% url 'profile' %}" class="btn btn-navy rounded-0 my-2 font-weight-bold">Back to Profile</a>
@@ -109,7 +114,7 @@
         <a href="{% url 'products' %}" class="btn btn-navy rounded-0 my-2 font-weight-bold">Continue Shopping Tools</a>
         {% endif %}
       </div>
-    </div>
+    </nav>
   </div>
-</div>
+</main>
 {% endblock %}
